fix: complete Hindi translations and translate language names in all locales
- Add missing Hindi translations for comparison ROI section
- Translate product_extended language names to native languages for all locales
- Add missing data-i18n attributes to footer section

Co-Authored-By: KaivalyaDeepTeam <KaivalyaDeepTeam@users.noreply.github.com>

--- a/translations/ar.json
+++ b/translations/ar.json
@@ -273,13 +273,13 @@
     "row8_localmind": "✅ ترخيص MIT"
   },
   "product_extended": {
-    "lang_english": "English",
-    "lang_hindi": "Hindi",
-    "lang_spanish": "Spanish",
-    "lang_arabic": "Arabic",
-    "lang_russian": "Russian",
-    "lang_italian": "Italian",
-    "lang_many_more": "+ Many More"
+    "lang_english": "الإنجليزية",
+    "lang_hindi": "الهندية",
+    "lang_spanish": "الإسبانية",
+    "lang_arabic": "العربية",
+    "lang_russian": "الروسية",
+    "lang_italian": "الإيطالية",
+    "lang_many_more": "+ المزيد"
   },
   "join": {
     "heading": "انضم إلى الحركة",
