--- a/translations/es.json
+++ b/translations/es.json
@@ -272,13 +272,13 @@
     "row8_localmind": "✅ Licencia MIT"
   },
   "product_extended": {
-    "lang_english": "English",
+    "lang_english": "Inglés",
     "lang_hindi": "Hindi",
-    "lang_spanish": "Spanish",
-    "lang_arabic": "Arabic",
-    "lang_russian": "Russian",
-    "lang_italian": "Italian",
-    "lang_many_more": "+ Many More"
+    "lang_spanish": "Español",
+    "lang_arabic": "Árabe",
+    "lang_russian": "Ruso",
+    "lang_italian": "Italiano",
+    "lang_many_more": "+ Muchos Más"
   },
   "join": {
     "heading": "Únete al Movimiento",
