--- a/translations/hi.json
+++ b/translations/hi.json
@@ -58,10 +58,10 @@
     "label": "LocalMind क्यों",
     "title": "LocalMind vs <span class='gradient-text'>क्लाउड सेवाएं</span>",
     "subtitle": "देखें कि LocalMind Otter.ai, Rev और Descript जैसी लोकप्रिय क्लाउड ट्रांसक्रिप्शन सेवाओं से कैसे तुलना करता है।",
-    "roi_title": "💰 Calculate Your Annual Savings",
-    "roi_cloud": "Average cloud service: <strong>$30/month × 12 months = $360/year</strong>",
-    "roi_localmind": "LocalMind: <strong>$0/year</strong>",
-    "roi_savings": "You save: <span class=\"gradient-text\">$360+ every year</span>"
+    "roi_title": "💰 अपनी वार्षिक बचत की गणना करें",
+    "roi_cloud": "औसत क्लाउड सेवा: <strong>$30/माह × 12 महीने = $360/वर्ष</strong>",
+    "roi_localmind": "LocalMind: <strong>$0/वर्ष</strong>",
+    "roi_savings": "आप बचाते हैं: <span class=\"gradient-text\">हर साल $360+</span>"
   },
   "testimonials": {
     "label": "वैश्विक उपयोगकर्ता",
@@ -150,60 +150,60 @@
   },
   "faq_items": {
     "q1": {
-      "question": "How can this be completely free?",
-      "answer": "LocalMind runs entirely on your device, so we have zero cloud infrastructure costs. No servers to maintain, no bandwidth to pay for, no storage fees. We believe AI should be accessible to everyone, so we've built a truly free solution that doesn't rely on the \"freemium\" model. Our code is open source - if you don't trust us, you can audit and compile it yourself."
+      "question": "यह पूरी तरह से मुफ्त कैसे हो सकता है?",
+      "answer": "LocalMind पूरी तरह से आपके डिवाइस पर चलता है, इसलिए हमारी शून्य क्लाउड इंफ्रास्ट्रक्चर लागत है। रखरखाव के लिए कोई सर्वर नहीं, भुगतान के लिए कोई बैंडविड्थ नहीं, कोई स्टोरेज शुल्क नहीं। हम मानते हैं कि AI सभी के लिए सुलभ होना चाहिए, इसलिए हमने एक वास्तव में मुफ्त समाधान बनाया है जो \"फ्रीमियम\" मॉडल पर निर्भर नहीं है। हमारा कोड ओपन सोर्स है - यदि आप हम पर विश्वास नहीं करते हैं, तो आप इसे स्वयं ऑडिट और संकलित कर सकते हैं।"
     },
     "q2": {
-      "question": "Is it really as accurate as cloud services?",
-      "answer": "Yes! LocalMind uses OpenAI's Whisper model - the same technology behind many commercial transcription services. We achieve 95%+ accuracy across 99 languages. Plus, our Chain-of-Thought quality scoring provides 20-30% better analysis accuracy than standard approaches. The only difference is your data stays on your device."
+      "question": "क्या यह वास्तव में क्लाउड सेवाओं जितना सटीक है?",
+      "answer": "हाँ! LocalMind OpenAI के Whisper मॉडल का उपयोग करता है - वही तकनीक जो कई वाणिज्यिक ट्रांसक्रिप्शन सेवाओं के पीछे है। हम 99 भाषाओं में 95%+ सटीकता प्राप्त करते हैं। इसके अलावा, हमारी Chain-of-Thought गुणवत्ता स्कोरिंग मानक दृष्टिकोणों की तुलना में 20-30% बेहतर विश्लेषण सटीकता प्रदान करती है। एकमात्र अंतर यह है कि आपका डेटा आपके डिवाइस पर रहता है।"
     },
     "q3": {
-      "question": "Will this work without an internet connection?",
-      "answer": "Absolutely! After the initial model download (one-time, happens on first run), LocalMind works 100% offline. Process audio files on airplanes, in remote locations, or anywhere without internet. Your workflow is never interrupted by connectivity issues."
+      "question": "क्या यह इंटरनेट कनेक्शन के बिना काम करेगा?",
+      "answer": "बिल्कुल! प्रारंभिक मॉडल डाउनलोड के बाद (एक बार, पहली बार चलने पर होता है), LocalMind 100% ऑफ़लाइन काम करता है। हवाई जहाज पर, दूरस्थ स्थानों में, या इंटरनेट के बिना कहीं भी ऑडियो फ़ाइलों को प्रोसेस करें। आपका वर्कफ़्लो कनेक्टिविटी समस्याओं से कभी बाधित नहीं होता।"
     },
     "q4": {
-      "question": "Can I use this commercially?",
-      "answer": "Yes! LocalMind is licensed under MIT - one of the most permissive open source licenses. Use it for personal projects, client work, commercial products, or anything else. No attribution required (though always appreciated). The only restriction: you can't hold us liable if something goes wrong."
+      "question": "क्या मैं इसका व्यावसायिक उपयोग कर सकता हूं?",
+      "answer": "हाँ! LocalMind MIT के तहत लाइसेंस प्राप्त है - सबसे अनुमति देने वाले ओपन सोर्स लाइसेंसों में से एक। इसे व्यक्तिगत परियोजनाओं, क्लाइंट कार्य, वाणिज्यिक उत्पादों, या किसी अन्य चीज़ के लिए उपयोग करें। कोई विशेषता आवश्यक नहीं (हालांकि हमेशा सराहना की जाती है)। एकमात्र प्रतिबंध: यदि कुछ गलत हो जाता है तो आप हमें उत्तरदायी नहीं ठहरा सकते।"
     },
     "q5": {
-      "question": "What about subtitle/SRT export for videos?",
-      "answer": "SRT/subtitle export is coming soon! We're actively developing this feature based on user feedback. Sign up for updates to be notified when we release multi-lingual subtitle export, including timecode synchronization and formatting options."
+      "question": "वीडियो के लिए सबटाइटल/SRT एक्सपोर्ट के बारे में क्या?",
+      "answer": "SRT/सबटाइटल एक्सपोर्ट जल्द आ रहा है! हम उपयोगकर्ता प्रतिक्रिया के आधार पर इस सुविधा को सक्रिय रूप से विकसित कर रहे हैं। जब हम टाइमकोड सिंक्रोनाइज़ेशन और स्वरूपण विकल्पों सहित बहुभाषी सबटाइटल एक्सपोर्ट जारी करें तो सूचित होने के लिए अपडेट के लिए साइन अप करें।"
     },
     "q6": {
-      "question": "What are the system requirements?",
-      "answer": "Minimum: 8GB RAM, 10GB free storage, macOS 10.15+ | Recommended: 16GB RAM, Apple Silicon or NVIDIA GPU for faster processing | Coming Soon: Windows 10+ and Linux (Ubuntu 22.04+)"
+      "question": "सिस्टम आवश्यकताएं क्या हैं?",
+      "answer": "न्यूनतम: 8GB RAM, 10GB खाली स्टोरेज, macOS 10.15+ | अनुशंसित: 16GB RAM, तेज़ प्रोसेसिंग के लिए Apple Silicon या NVIDIA GPU | जल्द आ रहा है: Windows 10+ और Linux (Ubuntu 22.04+)"
     }
   },
   "use_cases_cards": {
     "journalists": {
-      "title": "Journalists & Podcasters",
-      "problem": "<strong>Pain Point:</strong> Cloud services expose sensitive source conversations to corporate servers and potential legal requests.",
-      "solution": "<strong>Solution:</strong> Protect sources with 100% offline transcription. No server logs. No data breaches. Complete confidentiality."
+      "title": "पत्रकार और पॉडकास्टर",
+      "problem": "<strong>समस्या:</strong> क्लाउड सेवाएं संवेदनशील स्रोत बातचीत को कॉर्पोरेट सर्वर और संभावित कानूनी अनुरोधों के सामने उजागर करती हैं।",
+      "solution": "<strong>समाधान:</strong> 100% ऑफ़लाइन ट्रांसक्रिप्शन के साथ स्रोतों की रक्षा करें। कोई सर्वर लॉग नहीं। कोई डेटा उल्लंघन नहीं। पूर्ण गोपनीयता।"
     },
     "call_centers": {
-      "title": "Call Centers",
-      "problem": "<strong>Pain Point:</strong> Subscription services cost $400+/month for call quality auditing and agent training.",
-      "solution": "<strong>Solution:</strong> Audit 100% of calls with AI-powered quality scoring. Zero recurring costs. Unlimited usage."
+      "title": "कॉल सेंटर",
+      "problem": "<strong>समस्या:</strong> कॉल गुणवत्ता ऑडिटिंग और एजेंट प्रशिक्षण के लिए सदस्यता सेवाओं की लागत $400+/माह है।",
+      "solution": "<strong>समाधान:</strong> AI-संचालित गुणवत्ता स्कोरिंग के साथ 100% कॉल का ऑडिट करें। शून्य आवर्ती लागत। असीमित उपयोग।"
     },
     "researchers": {
-      "title": "Researchers",
-      "problem": "<strong>Pain Point:</strong> HIPAA and GDPR compliance prohibits uploading patient/participant interviews to cloud services.",
-      "solution": "<strong>Solution:</strong> Process interviews locally. Data never leaves your secure systems. Automatic compliance."
+      "title": "शोधकर्ता",
+      "problem": "<strong>समस्या:</strong> HIPAA और GDPR अनुपालन रोगी/प्रतिभागी साक्षात्कार को क्लाउड सेवाओं पर अपलोड करने से रोकता है।",
+      "solution": "<strong>समाधान:</strong> साक्षात्कार को स्थानीय रूप से प्रोसेस करें। डेटा आपके सुरक्षित सिस्टम को कभी नहीं छोड़ता। स्वचालित अनुपालन।"
     },
     "legal": {
-      "title": "Legal Professionals",
-      "problem": "<strong>Pain Point:</strong> Attorney-client privilege at risk when transcribing sensitive depositions through third parties.",
-      "solution": "<strong>Solution:</strong> Maintain privilege with on-device processing. No third-party access. Court-ready security."
+      "title": "कानूनी पेशेवर",
+      "problem": "<strong>समस्या:</strong> तीसरे पक्ष के माध्यम से संवेदनशील बयान ट्रांसक्राइब करते समय वकील-मुवक्किल विशेषाधिकार जोखिम में।",
+      "solution": "<strong>समाधान:</strong> ऑन-डिवाइस प्रोसेसिंग के साथ विशेषाधिकार बनाए रखें। कोई तीसरे पक्ष की पहुंच नहीं। अदालत-तैयार सुरक्षा।"
     },
     "smb": {
-      "title": "Small Businesses",
-      "problem": "<strong>Pain Point:</strong> Transcription subscriptions cost $20-50/month ($240-600/year) - prohibitive for bootstrapped teams.",
-      "solution": "<strong>Solution:</strong> Professional AI for $0. Save $360+/year. Invest savings in growth, not software rent."
+      "title": "छोटे व्यवसाय",
+      "problem": "<strong>समस्या:</strong> ट्रांसक्रिप्शन सदस्यताओं की लागत $20-50/माह ($240-600/वर्ष) है - बूटस्ट्रैप्ड टीमों के लिए निषेधात्मक।",
+      "solution": "<strong>समाधान:</strong> $0 के लिए पेशेवर AI। $360+/वर्ष बचाएं। बचत को विकास में निवेश करें, सॉफ़्टवेयर किराए में नहीं।"
     },
     "privacy": {
-      "title": "Privacy-Conscious Users",
-      "problem": "<strong>Pain Point:</strong> \"Trust us\" isn't good enough. Black-box AI services can't be verified or audited.",
-      "solution": "<strong>Solution:</strong> Audit every line of code yourself. Open-source transparency. No blind trust required."
+      "title": "गोपनीयता-जागरूक उपयोगकर्ता",
+      "problem": "<strong>समस्या:</strong> \"हम पर विश्वास करें\" पर्याप्त नहीं है। ब्लैक-बॉक्स AI सेवाओं को सत्यापित या ऑडिट नहीं किया जा सकता।",
+      "solution": "<strong>समाधान:</strong> कोड की हर लाइन का खुद ऑडिट करें। ओपन-सोर्स पारदर्शिता। कोई अंधा विश्वास आवश्यक नहीं।"
     }
   },
   "manifesto": {
@@ -272,13 +272,13 @@
     "row8_localmind": "✅ MIT लाइसेंस"
   },
   "product_extended": {
-    "lang_english": "English",
-    "lang_hindi": "Hindi",
-    "lang_spanish": "Spanish",
-    "lang_arabic": "Arabic",
-    "lang_russian": "Russian",
-    "lang_italian": "Italian",
-    "lang_many_more": "+ Many More"
+    "lang_english": "अंग्रेज़ी",
+    "lang_hindi": "हिंदी",
+    "lang_spanish": "स्पेनिश",
+    "lang_arabic": "अरबी",
+    "lang_russian": "रूसी",
+    "lang_italian": "इतालवी",
+    "lang_many_more": "+ और भी बहुत कुछ"
   },
   "join": {
     "heading": "आंदोलन में शामिल हों",
