--- a/translations/fr.json
+++ b/translations/fr.json
@@ -272,13 +272,13 @@
     "row8_localmind": "✅ Licence MIT"
   },
   "product_extended": {
-    "lang_english": "English",
+    "lang_english": "Anglais",
     "lang_hindi": "Hindi",
-    "lang_spanish": "Spanish",
-    "lang_arabic": "Arabic",
-    "lang_russian": "Russian",
-    "lang_italian": "Italian",
-    "lang_many_more": "+ Many More"
+    "lang_spanish": "Espagnol",
+    "lang_arabic": "Arabe",
+    "lang_russian": "Russe",
+    "lang_italian": "Italien",
+    "lang_many_more": "+ Bien Plus"
   },
   "join": {
     "heading": "Rejoignez le Mouvement",
