--- a/translations/ja.json
+++ b/translations/ja.json
@@ -272,13 +272,13 @@
     "row8_localmind": "✅ MITライセンス"
   },
   "product_extended": {
-    "lang_english": "English",
-    "lang_hindi": "Hindi",
-    "lang_spanish": "Spanish",
-    "lang_arabic": "Arabic",
-    "lang_russian": "Russian",
-    "lang_italian": "Italian",
-    "lang_many_more": "+ Many More"
+    "lang_english": "英語",
+    "lang_hindi": "ヒンディー語",
+    "lang_spanish": "スペイン語",
+    "lang_arabic": "アラビア語",
+    "lang_russian": "ロシア語",
+    "lang_italian": "イタリア語",
+    "lang_many_more": "+ その他多数"
   },
   "join": {
     "heading": "運動に参加",
