--- a/translations/ru.json
+++ b/translations/ru.json
@@ -272,13 +272,13 @@
     "row8_localmind": "✅ Лицензия MIT"
   },
   "product_extended": {
-    "lang_english": "English",
-    "lang_hindi": "Hindi",
-    "lang_spanish": "Spanish",
-    "lang_arabic": "Arabic",
-    "lang_russian": "Russian",
-    "lang_italian": "Italian",
-    "lang_many_more": "+ Many More"
+    "lang_english": "Английский",
+    "lang_hindi": "Хинди",
+    "lang_spanish": "Испанский",
+    "lang_arabic": "Арабский",
+    "lang_russian": "Русский",
+    "lang_italian": "Итальянский",
+    "lang_many_more": "+ Многое Другое"
   },
   "join": {
     "heading": "Присоединяйтесь к Движению",
