feat: add technical guide download section to website
- Add documentation section with PDF download links in 8 languages
- Add CSS styles for docs-grid and doc-link components
- Add translation keys for docs section in all language files

Co-Authored-By: KaivalyaDeepTeam <KaivalyaDeepTeam@users.noreply.github.com>

--- a/translations/ar.json
+++ b/translations/ar.json
@@ -309,5 +309,9 @@
     "req_storage_value": "10 جيجابايت مساحة فارغة",
     "req_gpu_label": "معالج الرسومات",
     "req_gpu_value": "اختياري - Apple Silicon أو NVIDIA يسرع المعالجة"
+  },
+  "docs": {
+    "heading": "📚 الدليل التقني",
+    "description": "وثائق شاملة تغطي التثبيت واختيار النموذج والنسخ وتقييم الجودة واستكشاف الأخطاء وإصلاحها."
   }
 }
