--- a/translations/hi.json
+++ b/translations/hi.json
@@ -308,5 +308,9 @@
     "req_storage_value": "10 GB खाली जगह",
     "req_gpu_label": "GPU",
     "req_gpu_value": "वैकल्पिक - Apple Silicon या NVIDIA प्रसंस्करण को तेज करता है"
+  },
+  "docs": {
+    "heading": "📚 तकनीकी गाइड",
+    "description": "इंस्टॉलेशन, मॉडल चयन, ट्रांसक्रिप्शन, गुणवत्ता स्कोरिंग और समस्या निवारण को कवर करने वाला व्यापक दस्तावेज़ीकरण।"
   }
 }
