--- a/translations/ru.json
+++ b/translations/ru.json
@@ -308,5 +308,9 @@
     "req_storage_value": "10 ГБ свободного места",
     "req_gpu_label": "GPU",
     "req_gpu_value": "Опционально - Apple Silicon или NVIDIA ускоряют обработку"
+  },
+  "docs": {
+    "heading": "📚 Техническое Руководство",
+    "description": "Полная документация по установке, выбору моделей, транскрипции, оценке качества и устранению неполадок."
   }
 }
